syntax="proto3";

package com.akpan.light;
option  java_multiple_files = true;
option java_package = "com.akpan.light";
option java_outer_classname = "LightSensorServiceProto";

service LightControlService {
  rpc StreamTemperature(LightControlRequest) returns (stream LightControlData);
}

message LightControlRequest{
  string command = 1;
}

message  LightControlData {
  bool light_status = 1;
  string time_of_day = 2;
}