syntax="proto3";

package com.akpan.temperature;
option  java_multiple_files = true;
option java_package = "com.akpan.temperature";
option java_outer_classname = "TemperatureSensorServiceProto";

service TemperatureControlService {
  rpc StreamTemperature(TemperatureRequest) returns (stream TemperatureData);
}

message TemperatureRequest{
}

message  TemperatureData {
  string sensor_id = 1;
  double temperature = 2;
  string timestamp = 3;
}